tests/ui/error-codes/E0615.stderr
error[E0615]: attempted to take value of method `method` on type `Foo`
  --> $DIR/E0615.rs:11:7
   |
LL |     f.method;
   |       ^^^^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL |     f.method();
   |             ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0615`.
